<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.pytorch.demo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_camera"
            app:destination="@id/navigation_camera" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="org.pytorch.demo.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_camera"
        android:name="org.pytorch.demo.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_history"
        android:name="org.pytorch.demo.ui.history.HistoryFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="org.pytorch.demo.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>